# tfhe-language-binding

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
fhe_core/: Cargo.toml
fhe_core/tests/: assembly.rs  base64.rs  compression.rs  fhe.rs  fhe_ops.rs  json.rs
fhe_js/: README.md  package-lock.json  package.json  setup.md
fhe_js/__tests__/: encrypt.js  keyGen.js  operations.js
fhe_js/__tests__/interaction/: client.js  server.js  web_server.js
fhe_js/crates/fhe_js/: Cargo.toml
fhe_js/crates/fhe_js/src/apis/: base64.rs  fhe.rs  fhe_ops.rs  http.rs  key_generator.rs  proven_fhe_ops.rs  serializer.rs  server_key_setter.rs
fhe_js/crates/fhe_js/src/configs/: zk_params.rs
fhe_js/crates/fhe_js/src/utils/: conversion.rs
fhe_js/src/: load.cts
fhe_python/: Cargo.toml  README.md  modules.pyi  pyproject.toml  setup.md  setup.py
fhe_python/src/apis/: assembly.rs  base64.rs  fhe.rs  fhe_ops.rs  http.rs  key_generator.rs  proven_fhe_ops.rs  serializer.rs  server_key_setter.rs
fhe_python/src/configs/: typing.rs  zk_params.rs
fhe_web/: README.md  package-lock.json  package.json
